Record: Do not crash when closing while recording

We were deactivating but we also need to wait for the thread to end.
This is blocking now, but this should only happen when forcing
unexpected terminations (i.e. destroyed while recording).

BUG: 467593